prueba del register servis worker

--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,6 @@
     </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="<%= BASE_URL %>js/worker-functions.js"></script>
   </body>
 </html>
